# EMC-New

./: .gitignore  CMakeLists.txt  EMC  Makefile  README  README.md  run.sh
source/: DNA.cpp  DNA.h  DNA.hpp  EMC.cpp  constants.h  constants.hpp  datafiles.cpp  datafiles.h  datafiles.hpp  evolution.cpp  evolution.h  evolution.hpp  minimization.h  minimization.hpp  mymath.cpp  mymath.h  mymath.hpp  personality.cpp  personality.h  personality.hpp  population.cpp  population.h  population.hpp  randomFunctions.cpp  randomFunctions.h  species.cpp  species.h  species.hpp
